# Veliko

./: .env.example  .gitignore  Caddyfile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_citations.py
backend/app/: config.py  db.py  main.py
backend/app/auth/: deps.py  models.py  router.py  schemas.py  security.py  service.py
backend/app/coherence/: contracts.py  models.py  pipeline.py  prechecks.py  router.py  schemas.py  service.py
backend/app/constructor/: freshness.py  hashing.py  models.py  node_types.py  router.py  schemas.py  service.py
backend/app/entitlements/: errors.py  gate.py  quota.py  ratelimit.py  tiers.py
backend/app/i18n/: prompts.py
backend/app/llm_gateway/: base.py  breaker.py  budget.py  errors.py  gateway.py
backend/app/verification/: apa_checks.py  contracts.py  errors.py  extraction.py  lookup.py  models.py  pipeline.py  router.py  schemas.py  service.py
backend/tests/: conftest.py
backend/tests/evals/: citation_golden.py  golden_dataset.py  run_citation_evals.py  run_evals.py
backend/tests/integration/: test_auth_api.py  test_coherence_api.py  test_constructor_api.py  test_pipeline.py  test_quota.py  test_verification_api.py  test_verification_pipeline.py
backend/tests/unit/: test_apa_checks.py  test_breaker.py  test_budget.py  test_citation_contracts.py  test_contracts.py  test_extraction.py  test_freshness.py  test_gate.py  test_gateway.py  test_hashing.py  test_lookup.py  test_node_types.py  test_prechecks.py  (+3 more)
(+24 files in other folders)
